[gd_scene load_steps=12 format=2]

[ext_resource path="res://sprites/characters/enemy/DDL_Serpiente.png" type="Texture" id=1]
[ext_resource path="res://scripts/characters/enemy/enemy-tres.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.5, 11 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13.5, 13.5 )

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 18 ]
}

[sub_resource type="Animation" id=3]
resource_name = "charger"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=4]
resource_name = "fall"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 29 ]
}

[sub_resource type="Animation" id=5]
resource_name = "hurt"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16 ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21 ]
}

[sub_resource type="Animation" id=7]
resource_name = "run"
length = 0.9
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=8]
resource_name = "walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}

[node name="enemyTres" type="KinematicBody2D" groups=["enemy"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
flip_h = true
hframes = 6
vframes = 5
frame = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 5 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="." groups=["area"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.5, 3.5 )
shape = SubResource( 2 )

[node name="AnimEnemyUno" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 9 )
anims/charger = SubResource( 3 )
anims/fall = SubResource( 4 )
anims/hurt = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/run = SubResource( 7 )
anims/walk = SubResource( 8 )

[node name="RayCastLimit" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 24 )

[node name="RayCastVision" type="RayCast2D" parent="."]
position = Vector2( 38, 5 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 140 )
collision_mask = 16

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
